# LIMO_SW

./: 자쓰민의 깃허브 사용법.txt
2023-02-01/src/nimo_ws/2023-02-01_renewal/: opencv_lane_detect_topic.cpp
2023-02-01/src/nimo_ws/devel/: .catkin  setup.sh
2023-02-01/src/nimo_ws/devel/lib/pkgconfig/: hehe.pc  (+7 more)
2023-02-02_2/src/m_car/m_car_2dnav/map/: L208.yaml
2023-02-02_2/src/m_car/m_car_2dslam/: CMakeLists.txt
2023-02-02_2/src/m_car/m_car_bringup/rviz/: navigation.rviz
2023-02-02_2/src/m_car/m_car_encoder/src/: teleop.py
2023-02-02_2/src/mux_trio/launch/: cmd_vel_mux.launch
2023-02-02_2/src/mux_trio/src/: mux_trio.cpp
2023-02-02_3/src/lidar_obstacle_avoid/launch/: obs.launch
2023-02-02_3/src/limo_application/launch/lane_detection/: lane_detection.launch
2023-02-02_3/src/m_car/m_car_2dnav/map/: test_L203.yaml
2023-02-02_3/src/m_car/m_car_2dnav/rviz/: navigation.rviz
2023-02-02_3/src/m_car/m_car_bringup/: CMakeLists.txt
2023-02-02_3/src/m_car/m_car_encoder/: CMakeLists.txt
2023-02-02_3/src/m_car/m_car_encoder/launch/: m_car (copy).launch
2023-02-02_3/src/m_car/m_car_encoder/rviz/: m_car_new_odom.rviz
2023-02-02_3/src/m_car/m_car_encoder/src/: car_control_node_encoder (copy).cpp
2023-02-02_3/src/mux_trio/: package.xml
2023-02-02_3/src/mux_trio/src/: mux_trio.cpp
2023-02-02_3/src/opencv_lane_detect/: CMakeLists.txt
2023-02-02_3/src/opencv_lane_detect/src/: opencv_lane_detect_topic (another copy).cpp  opencv_lane_detect_video.cpp
2023-02-04_1/src/lidar_obstacle_avoid/src/: lidar_obstacle_avoid_control.cpp
2023-02-04_1/src/limo_application/scripts/lane_detection/: control.py
2023-02-04_1/src/m_car/m_car_2dnav/map/: L203_ver2.yaml
2023-02-04_1/src/mux_trio/launch/: crosswalk.launch
2023-02-04_1/src/mux_trio/src/: mux_trio.cpp
2023-02-04_1/src/opencv_lane_detect/src/: opencv_lane_detect_topic.cpp  opencv_lane_detect_topic_speed.cpp  video_capture.py
2023-02-04_1/src/src/darknet_ros/darknet_ros/: CMakeLists.txt
2023-02-04_1/src/tr_processing/include/: tr_processing_2022.h  traffic_light.h
2023-02-04_1/src/tr_processing/launch/: tr_processing.launch
2023-02-04_1/src/tr_processing/src/: main.cpp  traffic_light_2022_past.cpp
2023-02-05/src/image_size_cutter/src/: image_size_cutter_node.cpp
2023-02-05/src/lidar_obstacle_avoid/: CMakeLists.txt  package.xml
2023-02-05/src/lidar_obstacle_avoid/src/: lidar_obstacle_avoid_control.cpp
2023-02-05/src/m_car/m_car_2dnav/launch/: gmapping.launch  move_base_amcl.launch
2023-02-05/src/m_car/m_car_2dnav/map/: L203_ver2.pgm  so2_map.pgm  test_L203.pgm
2023-02-05/src/m_car/m_car_encoder/: package.xml
2023-02-05/src/mux_trio/: CMakeLists.txt
2023-02-05/src/mux_trio/src/: mux_trio.cpp
2023-02-05/src/opencv_lane_detect/src/: import cv2.py  opencv_lane_detect_topic.cpp
2023-02-05/src/tr_processing/: CMakeLists.txt
2023-02-05/src/tr_processing/src/: tr_processing_2022.cpp  traffic_light.cpp  traffic_light_2022.cpp  traffic_light_re.cpp
(+71 files in other folders)
